--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,33 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Open+Sans:wght@400;700&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  font-family: 'Open Sans', 'Lato', sans-serif;
+}
+body{
+  background-color: #000;
+  color: #fff;
+}
+.centered{
+  display: flex;
+}
+.center{
+  background-color: transparent;
+  border: 4px solid rgba(183, 3, 3, 0.704);
+  border-radius: 50%;
+  border-left: transparent;
+  border-right: transparent;
+  margin: auto;
+  margin-top: 5rem;
+  height: 60px;
+  width: 60px;
+  animation: spinner 1.2s linear infinite;
+}
+@keyframes spinner{
+  0%{
+    transform: rotate(0deg);
+  }
+  100%{
+      transform: rotate(360deg);
+  }
 }
